# CareerBuddyApp

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: release.yml
app/: .gitignore  README.md  card.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/card/: Card.tsx  main.tsx
app/src/lib/: db.ts  types.ts
app/src/main/: App.tsx  Sidebar.tsx  UpdateBanner.tsx  main.tsx  store.ts
app/src/main/screens/: AIBuddy.tsx  Analytics.tsx  Calendar.tsx  CoverLetter.tsx  FileVault.tsx  Notepad.tsx  Onboarding.tsx  Tracker.tsx  Whiteboard.tsx
app/src/services/: llm.ts  reminders.ts
docs/: REBUILD_PLAN.md
