[package]
name = "careerbuddy"
version = "0.1.0"
description = "CareerBuddy — your job-hunt deck"
authors = ["you"]
edition = "2021"

# The library is what mobile + the binary both call into.
[lib]
name = "careerbuddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
opener = "0.7"
pdf-extract = "0.7"
zip = "2"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
sysinfo = "0.32"
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
